--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <div class="main">
-       <a href="/images/image-1.jpg"> <img src="/images/image-1.jpg" height="70px" width="70px" id="logo" alt="logo image"></a>
+       <a href="image-1.jpg"> <img src="image-1.jpg" height="70px" width="70px" id="logo" alt="logo image"></a>
         <ul>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="contact.html">CONTACT</a></li>
@@ -105,7 +105,7 @@
     </div>
    <div class="main_1"></div>
    <div class="main_2"></div>
-   <img src="/images/image_main.jpg" alt="PROFILE" id="logo2">
+   <img src="image_main.jpg" alt="PROFILE" id="logo2">
    <h1 class="meet">MEET CHOUBISA</h1>
    <p class="meet1"> FULL-STACK DEVELOPER AND STUDENT.</p>
 
