make this commite

--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,8 @@
     <p class="f-text-2">Email : insidecode0007@gmail.com</p>
     <h1 class="f-text-3">I AM SOCIAL</h1>
     <p class="f-text-4">__________</p>
-   <a href="https://instagram.com/mr_meet_choubisa14?utm_source=qr&igshid=MzNlNGNkZWQ4Mg=="> <img src="images/instagram.png" alt="Instragram" class="ins"></a>
-   <a href="https://www.facebook.com/meet.choubisa.5?mibextid=ZbWKwL"> <img src="images/facebook.png" alt="facebook" class="fcb"> </a>
+   <a href="https://instagram.com/mr_meet_choubisa14?utm_source=qr&igshid=MzNlNGNkZWQ4Mg=="> <img src="instagram.png" alt="Instragram" class="ins"></a>
+   <a href="https://www.facebook.com/meet.choubisa.5?mibextid=ZbWKwL"> <img src="facebook.png" alt="facebook" class="fcb"> </a>
    <a href="index.html" class="btn">← BACK</a>
     
 </body>
