--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <style>
     body {
       margin: 0;
-      background-image: url(images/backg.jpg);
+      background-image: url(backg.jpg);
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-size:100%;
