--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body{
             background-image: url(https://4kwallpapers.com/images/wallpapers/dark-background-abstract-background-network-3d-background-2560x2560-8324.png);
             background-repeat: no-repeat;
-            background-size: contain;
+            background-size: cover;
             background-attachment: fixed;
             position: relative;
             margin: 0%;
