--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       background-image: url(https://wallpaperaccess.com/full/3124541.png);
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-size:contain;
+      background-size:cover;
       position: relative;
     }
     .f-text{
