--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       background-image: url(backg.jpg);
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-size:contain;
+      background-size:cover;
       position: relative;
     }
     .about-1{
